data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3800.wast
;; 9. **Test: Multiple Br_Table Redirects to Single Target**    - **Description**: Design a `br_table` with all indices redirecting to a single target, followed by complex `call` chains.    - **Constraint**: Ensure the stack conditions are the same regardless of the `br_table` index, consistent with subsequent `call` operations.    - **Edge Case**: Validates handling uniform redirections to single control paths, confirming stack state reliability for multiple calls.

(assert_invalid
  (module
    (func $br_table_call_test
      (block $outer
        (block $target
          (br_table $target $target $target (i32.const 2))
          (call 0)
        )
        (call 1)
      )
    )
    (func)
    (func (param i32))
  )
  "type mismatch"
)